tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:84:39: error: request for member ‘len’ in something not a structure or union
   84 |   list_int tmp2 = list_int_create(tmp1.len);
      |                                       ^
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:86:33: error: request for member ‘len’ in something not a structure or union
   86 |   for (int tmp4 = 0; tmp4 < tmp1.len; tmp4++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:87:17: error: request for member ‘data’ in something not a structure or union
   87 |     int x = tmp1.data[tmp4];
      |                 ^

   1: #include <stdio.h>
